--- a/style.css
+++ b/style.css
@@ -34,138 +34,12 @@ body {
     );*/
     background-color: rgb(0, 0, 0);
 }
-/*setting header to alway stay at top on scroll*/
-header {
-    position: sticky;
-    top: 0;
-    z-index: 100;
-}
 
-/*style for nav, categories' container*/
-nav {
-    
-    border-radius: 10px;
-    background: #111;
-}
-/*style for nav day mode*/
-.navDay {
-    background-color: var(--first-light-color);
-}
-/*style for nav night mode*/
-.navNight {
-    border: 3px solid var(--first-dark-color);
-}
-/*style for nav ul to set to flex*/
-ul {
-    display: flex;
-    justify-content: center;
-    margin: 3px;
-    padding: 5px;
-    flex-wrap: wrap;
-    border: 3px solid var(--first-dark-color);
-    border-radius: 7px;
-}
-/*style for categories in nav*/
-li {
-    list-style-type: none;
-    border-radius: 5px;
-    cursor: pointer;
-}
-/*setting style for categories day mode*/
-.liDay:hover {
-    background-color: var(--second-light-color);
-}
-/*setting style for categories night mode*/
-.liNight:hover {
-    background-color: var(--second-dark-color);
-}
 /*the separator line*/
 hr {
     width: 93%;
     margin: 10px auto;
     border: 1.5px solid var(--third-light-color);
-}
-/*style buttons and indications*/
-.indication {
-    margin: 10px;
-    display: flex;
-    flex-wrap: nowrap;
-    justify-content: center;
-}
-/*style for children of indication container*/
-.indiChild {
-    margin: 2px;
-    padding: 2px;
-    border: none;
-    border-radius: 2px;
-    min-width: 55px;
-}
-/*style for day mode*/
-.indiChildDay {
-    background-color: var(--second-light-color);
-    border: 3px solid var(--second-light-color)
-}
-.indiChildDay:hover {
-    border: 3px solid var(--third-light-color)
-}
-/*style for night mode*/
-.indiChildNight {
-    background-color: var(--second-dark-color);
-    border: 3px solid var(--second-dark-color)
-}
-.indiChildNight:hover {
-    border: 3px solid var(--third-dark-color)
-}
-/*style for images container*/
-.container {
-    margin: auto;
-    display: grid;
-
-    /*display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: center;*/ /* orizontal  alignement*/
-    gap: 5px;
-}
-/*style for single image div*/
-.image {
-    /*aspect-ratio: 1 / 1;*/
-    border-radius: 10px;
-    display: flex;
-    /*padding-left: 4px;
-    padding-top: 4px;
-    padding-right: 4px;*/
-}
-/*style for single for day mode*/
-.imageDay {
-    background-color: var(--first-light-color);
-    /*padding: 5px;*/
-}
-.imageDay:hover {
-    background-color: var(--second-light-color);
-    box-shadow: -3px -3px 10px var(--third-light-color);
-}
-/*style for single for night mode*/
-.imageNight {
-    background-color: var(--first-dark-color);
-    /*padding: 5px;*/
-}
-.imageNight:hover {
-    background-color: var(--second-dark-color);
-    box-shadow: -3px -3px 10px var(--third-dark-color);
-}
-/*style single images*/
-img {
-    width: 100%;
-    object-fit: cover; /*ensure that the image doesn't cause distorsions*/
-    aspect-ratio: 1 / 1; /*ensure the squareness of every image*/
-    border-radius: 10px;
-}
-
-/*style for categories under images*/
-.image > p {
-    cursor: default;
-    margin: 5px;
 }
 
 /*styles fr diffrent screen dimensions, for responsive design*/
@@ -173,8 +47,10 @@ img {
     * {
         font-size: 1.6vw;
     }
+    main {
+        width: 75%;
+    }
     .container {
-        width: 70%;
         grid-template-columns: repeat(5, 1fr);
     }
     li {
@@ -185,8 +61,10 @@ img {
     * {
         font-size: 1.8vw;
     }
-    .container {
+    main {
         width: 85%;
+    }
+    .container {
         grid-template-columns: repeat(4, 1fr);
     }
     li {
@@ -197,8 +75,11 @@ img {
     * {
         font-size: 2.1vw;
     }
-    .container {
+    main {
         width: 100%;
+        padding: 10px;
+    }
+    .container {
         grid-template-columns: repeat(3, 1fr);
     }
     li {
