--- a/style.css
+++ b/style.css
@@ -46,7 +46,10 @@ hr {
 @media (min-width: 1201px) {
     * {
         font-size: 1.6vw;
-    }
+    }/*
+    .indiChild {
+        min-width: 150px;
+    }*/
     main {
         width: 75%;
     }
@@ -60,7 +63,10 @@ hr {
 @media (max-width: 1200px) {
     * {
         font-size: 1.8vw;
-    }
+    }/*
+    .indiChild {
+        min-width: 80px;
+    }*/
     main {
         width: 85%;
     }
@@ -74,7 +80,10 @@ hr {
 @media (max-width: 517px) {
     * {
         font-size: 2.1vw;
-    }
+    }/*
+    .indiChild {
+        min-width: 50px;
+    }*/
     main {
         width: 100%;
         padding: 10px;
