--- a/main.css
+++ b/main.css
@@ -67,8 +67,8 @@ main {
     display: flex;
     padding: 5px;
     border: 3px solid;
-    border-top: none;
-    border-bottom: none;
+    border-left: none;
+    border-right: none;
 }
 /*style for single for day mode*/
 .imageDay {
