--- a/footer.css
+++ b/footer.css
@@ -10,16 +10,16 @@ footer {
 .footerNight {
     border-color: var(--first-dark-color);
 }
-h1 {
+footer div {
     margin: 5px;
     padding: 5px;
     border-radius: 7px;
     border: 3px solid;
     border-top: none;
 }
-.h1Day {
+.divDay {
     border-color: var(--second-light-color);
 }
-.h1Night {
+.divNight {
     border-color: var(--second-dark-color);
 }
