--- a/main.css
+++ b/main.css
@@ -85,7 +85,7 @@ main {
     border-color: var(--third-dark-color);
 }
 /*style single images*/
-img {
+.image img {
     width: 100%;
     object-fit: cover; /*ensure that the image doesn't cause distorsions*/
     aspect-ratio: 1 / 1; /*ensure the squareness of every image*/
@@ -93,10 +93,20 @@ img {
 }
 
 /*style for categories under images*/
-p {
+.image ul {
     cursor: default;
     margin: 5px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    padding: 0;
     /*border: 3px solid #00000000;
     border-top: none;
     border-radius: 2px 2px 10px 10px;*/
+}
+
+.image li {
+    list-style-type: none;
+    margin: 5px;
+    border: 1px dotted;
 }
