--- a/style.css
+++ b/style.css
@@ -78,9 +78,9 @@ hr {
     }
 }
 @media (max-width: 517px) {
-    /** {
-        font-size: 2.1vw;
-    }*//*
+    * {
+        font-size:smaller;
+    }/*
     .indiChild {
         min-width: 50px;
     }*/
