--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@
 }
 * {
     box-sizing: border-box;
+    text-align: center;
 }
 /*body style for mode*/
 body {
@@ -19,24 +20,14 @@ body {
 }
 body > div {
     display: grid;
-    grid-template-columns: auto auto;
+    grid-template-columns: 1fr 9fr;
 }
 /*body style for day mode*/
 .bodyDay {
-    /*background: radial-gradient(
-        circle,
-        rgba(255, 255, 255, 1) 0%,
-        rgba(226, 255, 233, 1) 100%
-    );*/
     background-color: white;
 }
 /*body style for night mode*/
 .bodyNight {
-    /*background: radial-gradient(
-        circle,
-        rgba(0, 0, 0, 1) 0%,
-        rgba(0, 34, 0, 1) 100%
-    );*/
     background-color: rgb(0, 0, 0);
 }
 
@@ -49,9 +40,7 @@ hr {
 
 /*styles fr diffrent screen dimensions, for responsive design*/
 @media (min-width: 1201px) {
-    /** {
-        font-size: 1.6vw;
-    }*//*
+    /*
     .indiChild {
         min-width: 150px;
     }*/
@@ -59,38 +48,40 @@ hr {
         width: 75%;
     }
     .container {
-        grid-template-columns: repeat(5, auto);
+        /*grid-template-columns: repeat(5, auto);*/
     }
-    
+    .image {
+        max-width: 19%;
+    }
 }
 @media (max-width: 1200px) {
-    /** {
-        font-size: smaller;
-    }*//*
+    /*
     .indiChild {
         min-width: 80px;
     }*/
-    main {
+    body {
         width: 85%;
     }
     .container {
-        grid-template-columns: repeat(4, auto);
+        /*grid-template-columns: repeat(4, auto);*/
     }
-    
+    .image {
+        max-width: 24%;
+    }
 }
 @media (max-width: 517px) {
-    * {
-        font-size: smaller;
-    }/*
+    /*
     .indiChild {
         min-width: 50px;
     }*/
-    main {
+    body {
         width: 100%;
-        padding: 10px;
     }
     .container {
-        grid-template-columns: repeat(3, auto);
+        /*grid-template-columns: repeat(3, auto);*/
+    }
+    .image {
+        max-width: 32%;
     }
     
 }
