--- a/main.css
+++ b/main.css
@@ -1,7 +1,7 @@
 main {
     border-left: 3px solid;
     border-radius: 10px;
-    margin: 5px;
+    margin: auto;
 }
 .bodyDay > div > main {
     border-color: var(--second-light-color);
@@ -20,10 +20,10 @@ main {
     border-bottom: none;
     border-radius: 7px;
 }
-.indicationDay {
+.bodyDay > div .indication {
     border-color: var(--second-light-color);
 }
-.indicationNight {
+.bodyNight > div .indication {
     border-color: var(--second-dark-color);
 }
 /*style for children of indication container*/
@@ -35,30 +35,28 @@ main {
     border-radius: 7px;
     border-left: none;
     border-right: none;
+    background-color: #00000000;
 }
 /*style for day mode*/
-.indiChildDay {
-    background-color: #fff;
+.bodyDay > div .indiChild {
     border-color: #fff;
 }
-.indiChildDay:hover {
+.bodyDay > div .indiChild:hover {
     border-color: var(--third-light-color);
 }
 /*style for night mode*/
-.indiChildNight {
-    background-color: #000;
+.bodyNight > div .indiChild {
     border-color: #000;
 }
-.indiChildNight:hover {
+.bodyNight > div .indiChild:hover {
     border-color: var(--third-dark-color);
 }
 /*style for images container*/
 .container {
     display: flex;
     flex-wrap: wrap;
-    gap: 5px;
-    justify-content: space-around;
-    margin: 5px;
+    gap: 1px;
+    justify-content: space-evenly;
 }
 /*style for single image div*/
 .image {
@@ -70,17 +68,17 @@ main {
     border-right: none;
 }
 /*style for single for day mode*/
-.imageDay {
+.bodyDay > div .image {
     border-color: #fff;
 }
-.imageDay:hover {
+.bodyDay > div .image:hover {
     border-color: var(--third-light-color);
 }
 /*style for single for night mode*/
-.imageNight {
+.bodyNight > div .image {
     border-color: #000;
 }
-.imageNight:hover {
+.bodyNight > div .image:hover {
     border-color: var(--third-dark-color);
 }
 /*style single images*/
@@ -99,13 +97,11 @@ main {
     flex-wrap: wrap;
     justify-content: center;
     padding: 0;
-    /*border: 3px solid #00000000;
-    border-top: none;
-    border-radius: 2px 2px 10px 10px;*/
 }
 
 .image li {
     list-style-type: none;
     margin: 5px;
+    padding: 2px;
     border: 1px dotted;
 }
