--- a/openImage.css
+++ b/openImage.css
@@ -9,20 +9,19 @@
     border: 3px solid;
     border-radius: 12px;
 
+    margin: 5px;
 }
-.biggerImageDay {
-    background-color: #fff;
+.bodyDay > div .biggerImage {
     border-color: var(--second-light-color);
 }
-.biggerImageNight {
-    background-color: #000;
+.bodyNight > div .biggerImage {
     border-color: var(--second-dark-color);
 }
 .biggerImage button {
     /*height: 100%;*/
     position: absolute;
     top: 0;
-    left: 0;
+    right: 0;
     border-radius: 5px;
     padding: 10px;
     background-color: green;
