--- a/main.css
+++ b/main.css
@@ -1,7 +1,7 @@
 main {
     border-left: 3px solid;
     border-radius: 10px;
-    margin: auto;
+    margin: 5px 0;
 }
 .bodyDay > div > main {
     border-color: var(--second-light-color);
