added number of imges near the categories in the nav tag

--- a/main.css
+++ b/main.css
@@ -103,5 +103,7 @@ main {
     list-style-type: none;
     margin: 5px;
     padding: 2px;
-    border: 1px dotted;
+}
+.active {
+    border-color: var(--third-dark-color);
 }
