--- a/style.css
+++ b/style.css
@@ -58,7 +58,7 @@ hr {
         /*grid-template-columns: repeat(4, auto);*/
     }
     .image {
-        width: 24%;
+        width: 25%;
     }
 }
 @media (max-width: 517px) {
@@ -73,7 +73,8 @@ hr {
     }
     .image {
         width: 33%;
-    }/*
+    }
+    /*
     body > div {
         grid-template-columns: 10fr;
     }
