--- a/main.css
+++ b/main.css
@@ -59,16 +59,17 @@ main {
 }
 /*style for images container*/
 .container {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 1px;
-    justify-content: space-evenly;
+    display: grid;
+    
+    justify-items: stretch;
+    justify-content: center;
+    gap: 5px;
+    margin: 5px;
 }
 /*style for single image div*/
 .image {
     border-radius: 10px;
     display: flex;
-    padding: 5px;
     border: 3px solid;
     border-left: none;
     border-right: none;
