--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ body {
 }
 body > div {
     display: grid;
-    grid-template-columns: auto auto;
+    grid-template-columns: auto 1fr;
 }
 /*body style for day mode*/
 .bodyDay {
@@ -40,30 +40,36 @@ hr {
 
 /*styles fr diffrent screen dimensions, for responsive design*/
 @media (min-width: 1201px) {
+    * {
+        font-size: 1em;
+    }
     body {
         width: 75%;
     }
     .container {
-        /*grid-template-columns: repeat(5, auto);*/
+        grid-template-columns: repeat(auto-fill, minmax(10%, 16%)); /*responsive grid*/
     }
     .image {
-        width: 19%;
+        /*width: 19%;*/
     }
 }
 @media (max-width: 1200px) {
+    * {
+        font-size: 0.95em;
+    }
     body {
         width: 85%;
     }
     .container {
-        /*grid-template-columns: repeat(4, auto);*/
+        grid-template-columns: repeat(auto-fill, minmax(10%, 24%)); /*responsive grid*/
     }
     .image {
-        width: 24.8%;
+        /*width: 24.8%;*/
     }
 }
 @media (max-width: 517px) {
     * {
-        font-size: smaller;
+        font-size: 0.9em;
     }
     body {
         width: 100%;
@@ -72,10 +78,10 @@ hr {
         padding: 5px;
     }
     .container {
-        /*grid-template-columns: repeat(3, auto);*/
+        grid-template-columns: repeat(auto-fill, minmax(10%, 31%)); /*responsive grid*/
     }
     .image {
-        width: 33%;
+        /*width: 33%;*/
     }
     /*
     body > div {
