--- a/section.css
+++ b/section.css
@@ -1,8 +1,8 @@
 section {
     border-left: 3px solid;
     border-radius: 10px;
-    display: flex;
-    flex-direction: column;
+    display: grid;
+    grid-template-columns: auto;
     justify-content: space-between;
 }
 .bodyDay section {
@@ -14,10 +14,11 @@ section {
 
 /*style buttons and indications*/
 .indication {
+    height: 39px;
     margin: 5px;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
+    display: grid;
+    grid-template-columns: auto auto auto auto;
+    justify-content: stretch;
     border: 3px solid;
     border-top: none;
     border-bottom: none;
@@ -37,8 +38,8 @@ section {
 }
 /*style for children of indication container*/
 .indiChild {
-    margin: 2px;
-    padding: 2px;
+    margin: auto;
+    padding: 5px 10px;
     border: 3px solid;
     border-radius: 7px;
     border-left: none;
