--- a/style.css
+++ b/style.css
@@ -53,10 +53,10 @@ hr {
         width: 75%;
     }
     .container {
-        grid-template-columns: repeat(auto-fill, minmax(10%, 16%)); /*responsive grid*/
+        
     }
     .image {
-        /*width: 19%;*/
+        width: 19.5%; 
     }
 }
 @media (max-width: 1200px) {
@@ -67,10 +67,10 @@ hr {
         width: 85%;
     }
     .container {
-        grid-template-columns: repeat(auto-fill, minmax(10%, 24%)); /*responsive grid*/
+        
     }
     .image {
-        /*width: 24.8%;*/
+        width: 23.8%; 
     }
 }
 @media (max-width: 517px) {
@@ -84,10 +84,10 @@ hr {
         padding: 5px;
     }
     .container {
-        grid-template-columns: repeat(auto-fill, minmax(10%, 31%)); /*responsive grid*/
+        
     }
     .image {
-        /*width: 33%;*/
+       width: 31.5%; 
     }
     /*
     body > div {
